2004-11-07  Mark Kettenis  <kettenis@gnu.org>

	* mips64obsd-nat.c: Include "mips-tdep.h".
	(MIPS64OBSD_NUM_REGS): Remove define.
	(MIPS_PC_REGNUM, MIPS_FP0_REGNUM, MIPS_FSR_REGNUM): New defines.
	(mips64obsd_supply_gregset, mips64obsd_collect_gregset): Handle
	floating-point registers correctly.
	* Makefile.in (mips64obsd-nat.o): Update dependencies.

	* mips64obsd-tdep.c: Include "trad-frame.h", "tramp-frame.h" and
	"gdb_assert.h".
	(mips64obsd_sigframe_init): New function.
	(mips64obsd_sigframe): New variable.
	(mips64obsd_init_abi): Add comments.  Prepend mips64obsd_sigrame
	unwinder.
	* Makefile.in (mips64obsd-tdep.o): Update dependencies.

2004-11-06  Joel Brobecker  <brobecker@gnat.com>

	* alpha-mdebug-tdep.c: #include mdebugread.h.
	Replace alpha_extra_func_info_t by struct mdebug_extra_func_info *.
	* Makefile.in (alpha-mdebug-tdep.o): Add dependency on mdebugread.h.

2004-11-05  Andrew Cagney  <cagney@gnu.org>

	* dwarf2-frame.c (dwarf2_frame_cache): Only complain when both the
	CFI and the init_reg method leave the register unspecified.
	Include the register name in the "Incomplete CFI data" complaint.
	Supress leading zeros in the address.

2004-11-05  Mark Kettenis  <kettenis@gnu.org>

	* dwarf2-frame.c (decode_frame_entry_1): Avoid indirection when
	skipping a personality routine in a CIE augmentation.

2004-11-05  Jeff Johnston  <jjohnstn@redhat.com>

	* defs.h (fatal, vfatal): New function prototypes.
	* stack.c (backtrace_command_stub): Stub to call backtrace_command_1
	via catch_errors.
	(backtrace_command): Change to call backtrace_command_stub via
	catch_errors instead of calling backtrace_command_1 directly.
	(backtrace_full_command): Ditto.
	* utils.c (error_stream_1): New static function.
	(verror): Change to call error_stream_1 instead of error_stream.
	(error_stream): Call error_stream_1 with RETURN_ERROR argument.
	(vfatal, fatal): New functions.

2004-11-05  Andrew Cagney  <cagney@gnu.org>
